<resources>
    <string name="app_name">Pupular Movies</string>
    <string name="offline_message">Please connect to internet and try again...</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="release_date">Release Date:</string>
    <string name="user_rating">User Rating:</string>
    <string name="popularity">Popularity:</string>
    <string name="plot_synopsis">plot synopsis:</string>
    <string name="original_title">Original Title:</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="favorite">Favorite</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews:</string>
    <string name="review_icon">Review Icon</string>
    <string name="trailer_icon">Trailer Icon</string>
</resources>
