<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udacity.popularmovie.pupularmovies.MainActivity">


    <GridView
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:horizontalSpacing="2dp"
        android:numColumns="auto_fit"
        android:padding="0dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="2dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/top_rated_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/top_rated"
            android:textColor="@color/colorAccent"
            android:textIsSelectable="false" />

        <RadioButton
            android:id="@+id/most_popular_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/most_popular"
            android:textColor="@color/colorAccent" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/offline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f8000000"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/offline_message"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
