<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="udacity.popularmovie.pupularmovies.DetailsActivity">



    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grediant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/reviews_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView8"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6"
                    android:layout_below="@id/trailers_Linear"
                    android:layout_marginTop="8dp"
                    android:text="@string/reviews"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/trailers_Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView3"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6"
                    android:layout_below="@+id/release_date"
                    android:layout_marginTop="11dp"
                    android:text="@string/trailers"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView7"
                    android:layout_alignStart="@+id/textView7"
                    android:layout_below="@+id/textView7"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6"
                    android:layout_below="@+id/user_rating"
                    android:layout_marginTop="11dp"
                    android:text="@string/release_date"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView6"
                    android:layout_alignStart="@+id/textView6"
                    android:layout_below="@+id/textView6"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView5"
                    android:layout_alignStart="@+id/textView5"
                    android:layout_below="@+id/popularity"
                    android:layout_marginTop="13dp"
                    android:text="@string/user_rating"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView5"
                    android:layout_alignStart="@+id/textView5"
                    android:layout_below="@+id/textView5"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView4"
                    android:layout_alignStart="@+id/textView4"
                    android:layout_below="@+id/overview"
                    android:layout_marginTop="16dp"
                    android:text="@string/popularity"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView4"
                    android:layout_alignStart="@+id/textView4"
                    android:layout_below="@+id/textView4"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/original_name"
                    android:layout_marginTop="14dp"
                    android:text="@string/plot_synopsis"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="300dp"
                    android:text="@string/original_title"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/original_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />
            </RelativeLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/favoriteImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/favoriteoff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/favorite" />


</android.support.constraint.ConstraintLayout>
